infra/k8s/base/frontend-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: web-service
  ports:
  - port: 3000
    targetPort: 3000
